fix(calculator): remove hover on mobile calculator, radio, checkbox, input

--- a/src/sass/components/_checkbox.sass
+++ b/src/sass/components/_checkbox.sass
@@ -7,10 +7,11 @@
     padding: 0 20px
     &:nth-of-type(even)
         background: $--white-secondary
-    &:hover
-        .checkbox_wrapped
-            .checkbox__icon
-                background-image: url('../../src/assets/icons/icons_raccoon/checkbox-filled-grey.svg')
+    @media (hover: hover)
+        &:hover
+            .checkbox_wrapped
+                .checkbox__icon
+                    background-image: url('../../src/assets/icons/icons_raccoon/checkbox-filled-grey.svg')
     
     .checkbox__right-space
         +helper-text-desktop
